--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <nav class="navbar">
         <a href="https://samiahmad2120.github.io">Home</a>
-        <a href="#">Lab 3</a>
+        <a href="https://samiahmad2120.github.io/Lab3">Lab 3</a>
     </nav>
 
     <h1>Sami Ahmad</h1>
