--- a/Lab3.html
+++ b/Lab3.html
@@ -68,7 +68,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <div class="navbar-nav">
-                <a class="nav-link btn btn-light me-2" href="https://samiahmad2120.github.io">Website</a>
+                <a class="nav-link btn btn-light me-2" href="https://samiahmad2120.github.io">Home</a>
                 <a class="nav-link btn btn-light" href="https://samiahmad2120.github.io/Lab3">Lab 3</a>
             </div>
         </div>
