--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sami Ahmad Website</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+
+        .jumbotron {
+            margin: 0 auto;
+            text-align: center;
+            background-color: #222222;
+            color: white;
+            border-radius: 10px;
+            padding: 20px;
+            margin-top: 20px;
+            font-size: 2em; /* Set the font size to 2 times the default size */
+        }
+
         body {
             background-color: #1d1d1d;
             color: white;
@@ -15,14 +28,20 @@
         .navbar {
             background-color: #222222;
             color: white;
-            text-align: center;
+            text-align: left; /* Align the text to the left */
             padding: 10px 0;
         }
 
-        .navbar a {
-            color: white;
-            text-decoration: none;
+        .navbar a:link,
+            .navbar a:visited {
+            color: white; /* Unvisited link color */
             padding: 10px 20px;
+            text-decoration: none;
+            display: inline-block;
+        }
+
+        .navbar a:hover {
+            color: gray; /* Hovered link color */
         }
 
         img {
@@ -34,29 +53,45 @@
 
         p {
             margin-top: 20px;
+            text-align: center;
         }
 
-        a:link,
+        a:link {
+            color: white; /* Unvisited link color */
+            padding: 1px 1px;
+            text-decoration: none;
+            display: inline-block;
+        } 
+
         a:visited {
-            color: rgb(99, 99, 99);
+            color: rgb(141, 141, 141); /* Visited link color */
             padding: 1px 1px;
             text-decoration: none;
             display: inline-block;
         }
+
     </style>
 </head>
 
 <body>
 
-    <nav class="navbar">
-        <a href="https://samiahmad2120.github.io">Home</a>
-        <a href="https://samiahmad2120.github.io/Lab3">Lab 3</a>
+    <div class="jumbotron">
+        <h1 class="display-4">Sami Ahmad</h1>
+        <p class="lead">Welcome To My Website</p>
+        <hr class="my-4">
+    </div>
+
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <div class="navbar-nav">
+                <a class="nav-link btn btn-light me-2" href="https://samiahmad2120.github.io">Home</a>
+                <a class="nav-link btn btn-light" href="https://samiahmad2120.github.io/Lab3">Lab 3</a>
+            </div>
+        </div>
     </nav>
 
-    <h1>Sami Ahmad</h1>
-    <h2>Welcome To My Website!</h2>
 
-    <img src="Me.jpg" alt="Sami Ahmad" style="max-width: 100%; height: auto; margin-top: 25px; max-height: 500px;">
+    <img src="Me.jpg" alt="Sami Ahmad" class="mx-auto d-block" style="max-width: 100%; height: auto; margin-top: 25px; max-height: 500px;">
 
     <h3>About Me:</h3>
     <p>
@@ -76,9 +111,9 @@
         <li>Team Fortress 2</li>
     </ol>
 
-    <hr />
-    <p>
-        <i>Sami Ahmad<br />2/11/2024</i>
+    <hr style="clear:both;">
+    <p style="text-align: left;">
+    <i>Sami Ahmad<br />2/11/2024</i>
     </p>
 
 </body>
