More Edit's And Addition's
Added More Images, Edited Text And Added More Information

--- a/Lab3.html
+++ b/Lab3.html
@@ -69,8 +69,8 @@
 <body>
 
     <div class="jumbotron">
-        <h1 class="display-4">Arthur Morgan</h1>
-        <p class="lead">Arguably The Best Fictional Protagonist In Video Game History</p>
+        <h1 class="display-4"><b>Arthur Morgan</b></h1>
+        <p class="lead"><b>Arguably The Best Fictional Protagonist In Video Game History</b></p>
         <hr class="my-4">
     </div>
 
