--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         img {
             border: 4px solid #ffffff;
-            max-width: 100%;
+            max-width: 1000%;
             height: auto;
             margin-top: 20px;
         }
@@ -70,6 +70,12 @@
             display: inline-block;
         }
 
+        ol {
+    text-align: center; /* Center justify the list */
+    list-style-position: inside; /* Position the bullets inside the list */
+    }
+
+
     </style>
 </head>
 
@@ -91,7 +97,15 @@
     </nav>
 
 
-    <img src="Me.jpg" alt="Sami Ahmad" class="mx-auto d-block" style="max-width: 100%; height: auto; margin-top: 25px; max-height: 500px;">
+    <div class="row">
+        <div class="col-md-6">
+            <img src="Me.jpg" alt="First Image" class="mx-auto d-block" style="max-width: 100%; height: auto; margin-top: 15px; margin-bottom: 15px; max-height: 550px;">
+        </div>
+        <div class="col-md-6">
+            <img src="SIAC.jpg" alt="Second Image" class="mx-auto d-block" style="max-width: 100%; height: auto; margin-top: 15px; margin-bottom: 15px; max-height: 550px;">
+        </div>
+    </div>
+
 
     <h3>About Me:</h3>
     <p>
@@ -99,16 +113,16 @@
     </p>
 
     <p>
-        I am a second generation Arab American, I'm half Palestinian and half Syrian. I am also a Muslim which is the core of who I am. I have always been fascinated by religion as a whole and have self-studied almost every major religion and their respective history. Ever since I was a little kid I've been fascinated by history. I love reading and studying the many different eras and events of humanity, examples being the Roman Empire, the discovery of America, and the Celtic takeover of the 1200's. I used to be a competitive swimmer in high school, and swimming is very much still a part of my life. I am a swim instructor and a swim coach, I coach for the Staten Island Aquatics Club (SIAC) and also run private lessons at the YMCA. I love working in teams and have always worked best in groups. I enjoy public speaking as it allows my voice to be heard, and I hope that any chance I get I can further prove my dedication into anything I set my mind to.
+        I am a second generation Arab American, I'm half Palestinian and half Syrian. I am also a Muslim which is the core of who I am. I have always been fascinated by religion as a whole and have self-studied almost every major religion and their respective history. Ever since I was a little kid I've been fascinated by history. I love reading and studying the many different eras and events of humanity, examples being the Roman Empire, the discovery of America, and the Celtic takeover of Europe in the 1200's. I used to be a competitive swimmer in high school, and swimming is very much still a part of my life. I am a swim instructor and a swim coach, I coach for the Staten Island Aquatics Club (SIAC) and also run private lessons at the YMCA. I love working in teams and have always worked best in groups. I enjoy public speaking as it allows my voice to be heard, and I hope that any chance I get I can further prove my dedication into anything I set my mind to.
     </p>
 
     <h3>My Top 5 Video Games:</h3>
-    <ol>
-        <li>Red Dead Redemption 2 (Arguably the best video game ever created. Here is a link to a Youtube video explaining why: <a href="https://www.youtube.com/watch?v=QOV53IrgTGY">"Why Red Dead Redemption 2 is Perfect to Me"</a>)</li>
-        <li>Dying Light 2</li>
-        <li>The Elder Scrolls 5: Skyrim</li>
-        <li>Minecraft</li>
-        <li>Team Fortress 2</li>
+    <ol style="list-style-position: inside; padding-left: 0;">
+        <li style="margin-bottom: 1em;">Red Dead Redemption 2: (Arguably the best video game ever created. Here is a link to a Youtube video explaining why: <a href="https://www.youtube.com/watch?v=QOV53IrgTGY">"Why Red Dead Redemption 2 is Perfect to Me"</a>)</li>
+        <li style="margin-bottom: 1em;">Dying Light 2: An amazing game with an intuitive parkour system. The combat is better than its prequel counterpart and makes up for its underwhelming story.</li>
+        <li style="margin-bottom: 1em;">The Elder Scrolls 5 Skyrim: I game ive grown up with over the year's that brought me into RPG'S and my love for games</li>
+        <li style="margin-bottom: 1em;">Minecraft: the first game I've ever played and bring's me the fondest memories of constructing anything from my child imagination.</li>
+        <li style="margin-bottom: 1em;">Team Fortress 2: My first ever multiplayer game that defined my enjoyment for competitive yet silly online experiences, the community is the funniest but also most deranged playerbase I've ever interacted with.</li>
     </ol>
 
     <hr style="clear:both;">
