--- a/Lab3.html
+++ b/Lab3.html
@@ -8,6 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
+
+.jumbotron h1 {
+    /* Other styles... */
+    font-family: Impact, Charcoal, sans-serif; /* Use Impact font for the 3D effect */
+    text-shadow: 2px 2px 0 #000, 3px 3px 0 #000, 4px 4px 0 #000; /* Create a 3D shadow effect */
+}
+
+
         body {
             background-color: #1d1d1d;
             color: white;
