--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <div class="navbar-nav">
                 <a class="nav-link btn btn-light me-2" href="https://samiahmad2120.github.io">Home</a>
                 <a class="nav-link btn btn-light" href="https://samiahmad2120.github.io/Lab3">Lab 3</a>
+                <a class="nav-link btn btn-light" href="https://samiahmad2120.github.io/Lab4">Lab 4</a>
             </div>
         </div>
     </nav>
