--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
                 <a class="nav-link btn btn-light me-2" href="https://samiahmad2120.github.io">Home</a>
                 <a class="nav-link btn btn-light" href="https://samiahmad2120.github.io/Lab3">Lab 3</a>
                 <a class="nav-link btn btn-light" href="https://samiahmad2120.github.io/Lab4">Lab 4</a>
+                <a class="nav-link btn btn-light" href="https://samiahmad2120.github.io/Lab5">Lab 5</a>
+
             </div>
         </div>
     </nav>
