--- a/Lab6.html
+++ b/Lab6.html
@@ -1,87 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat Facts</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <style>
-        .jumbotron {
-            margin: 0 auto;
+        body {
+            background-color: #1d1d1d;
+            color: white;
+            font-family: "Times New Roman", serif; 
             text-align: center;
+        }
+
+        .jumbotron {
             background-color: #222222;
             color: white;
+            margin: 0 auto;
+            text-align: center;
             border-radius: 10px;
             padding: 20px;
             margin-top: 20px;
             font-size: 2em;
         }
 
-        body {
-            background-color: #1d1d1d;
-            color: white;
-            font-family: Arial, sans-serif;
+        .content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
         }
 
-        img {
-            border: 4px solid #ffffff;
-            max-width: 100%;
-            height: auto;
-            margin-top: 20px;
-        }
-
-        p {
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        table, th, td {
-            border: 1px solid white;
+        table {
+            width: 70%; 
+            margin-left: auto;
+            margin-right: auto;
             border-collapse: collapse;
-            margin: 0 auto;
+            border-spacing: 0;
+            background-color: rgb(77, 77, 77);
             color: white;
+            border: 1px solid white;
         }
 
         th, td {
             padding: 10px;
-            text-align: center;
+            border: 1px solid white;
+        }
+
+        th {
+            background-color: rgb(68, 68, 68);
         }
 
         button {
-            display: block;
-            margin: 20px auto;
-            padding: 10px 20px;
-            background-color: #222222;
+            background-color: gray;
             color: white;
-            border: 1px solid white;
-            border-radius: 5px;
+            border: none;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
             cursor: pointer;
+            border-radius: 5px;
+            font-family: "Times New Roman", serif; /* Updated font family */
+            margin-bottom: 20px;
         }
 
-        button:hover {
-            background-color: #333333;
+        img {
+            border: 4px solid rgb(49, 49, 49);
+            width: 800px; /* Increased width */
+            height: auto;
+            margin-top: 20px;
+            border-radius: 15px;
+            float: right; /* Align the image to the right */
         }
     </style>
 </head>
-
 <body>
     <div class="jumbotron">
-        <h1 class="display-4">Cat Facts</h1>
-        <p class="lead">Learn interesting facts about cats!</p>
-        <hr class="my-4">
+        <h1>Wonderful World of Cat Facts</h1>
     </div>
-
-    <button id="fetchData">Fetch Cat Facts</button>
-    <table id="factsTable">
-        <tr>
-            <th>Fact ID</th>
-            <th>Fact</th>
-        </tr>
-    </table>
-    <img id="catImage" src="default-image.jpg" alt="Cat Image" width="300">
-
-    <script src="script.js"></script>
+    <button id="loadFacts">Load Cat Facts</button>
+    <div class="content">
+        <table id="factsTable">
+            <tr>
+                <th>Fact ID</th>
+                <th>Fact</th>
+            </tr>
+        </table>
+        <img id="catPhoto" src="default-image.jpg">
+    </div>
+    <script src="Lab6.js"></script>
 </body>
-
 </html>
