--- a/Final.html
+++ b/Final.html
@@ -74,7 +74,6 @@
         body, .modal-content {
             font-family: Arial, sans-serif;
         }
-        /* Additional styles for genre dropdown */
         .dropdown-menu {
             background-color: #292929; /* Slightly darker than the card background */
         }
@@ -97,7 +96,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
         <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" id="homeLink" href="https://samiahmad2120.github.io/Final.html" aria-current="page">Home</a>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Genres
