--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                 <a class="nav-link btn btn-light" href="https://samiahmad2120.github.io/Lab4">Lab 4</a>
                 <a class="nav-link btn btn-light" href="https://samiahmad2120.github.io/Lab5">Lab 5</a>
                 <a class="nav-link btn btn-light" href="https://samiahmad2120.github.io/Lab6">Lab 6</a>
+                <a class="nav-link btn btn-light" href="https://samiahmad2120.github.io/Final">Game Hub</a>
 
             </div>
         </div>
