--- a/Final.html
+++ b/Final.html
@@ -6,6 +6,8 @@
     <title>Final Project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+
+
         .jumbotron {
             background-color: #222222;
             color: white;
@@ -19,6 +21,16 @@
             color: white;
             font-family: Arial, sans-serif;
         }
+        
+        #banner {
+            background-image: url('Final.webp'); /* Update with the actual path or URL */
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 250px; /* Increased height */
+          margin-bottom: 20px; /* Space below the banner */
+        }
+
         .navbar, .footer {
             background-color: #222222;
             color: white;
@@ -83,10 +95,17 @@
 </head>
 <body>
 
+
+
+
+
 <div class="jumbotron">
-    <h1 class="display-4">Game Hub</h1>
-    <p class="lead">A Place To Read Up On Games</p>
+    <h1 class="display-4">GAMEPEDIA</h1>
+    <p class="lead">A Place To Read Up On Games!</p>
 </div>
+
+<div id="banner"></div>
+
 
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
@@ -133,7 +152,7 @@
 
 <footer class="footer mt-auto py-3 text-center">
     <div>
-        <span>&copy; 2024 Sami Ahmad. All Rights Reserved.</span>
+        <span>&copy; 2024 Sami Ahmad </span>
     </div>
 </footer>
 
@@ -142,10 +161,27 @@
     const apiKey = '361cedb6f506437f902335be6ca5050b';
     const baseUrl = 'https://api.rawg.io/api/games';
 
-    document.addEventListener('DOMContentLoaded', function() {
-        fetchGenres();
-        fetchGames('popularGames', '-added');
-    });
+   
+    function showHomePage() {
+        document.getElementById('popularGamesContainer').style.display = 'block'; // Show Popular Games
+        document.getElementById('genreGamesContainer').style.display = 'none'; // Hide genre-specific games
+        const jumbotron = document.querySelector('.jumbotron');
+        jumbotron.innerHTML = `
+            <h1 class="display-4">Game Hub</h1>
+            <p class="lead">A Place To Read Up On Games</p>
+        `;
+    }
+
+    async function fetchGames(containerId, ordering = 'rating', genres = '') {
+        const url = `${baseUrl}?key=${apiKey}&ordering=${ordering}${genres}`;
+        try {
+            const response = await fetch(url);
+            const data = await response.json();
+            displayGames(data.results, containerId);
+        } catch (error) {
+            console.error('Failed to fetch games:', error);
+        }
+    }
 
     async function fetchGenres() {
         const genreUrl = `https://api.rawg.io/api/genres?key=${apiKey}`;
@@ -196,16 +232,6 @@
         }
     }
 
-    async function fetchGames(containerId, ordering = 'rating', genres = '') {
-        const url = `${baseUrl}?key=${apiKey}&ordering=${ordering}${genres}`;
-        try {
-            const response = await fetch(url);
-            const data = await response.json();
-            displayGames(data.results, containerId);
-        } catch (error) {
-            console.error('Failed to fetch games:', error);
-        }
-    }
 
     async function fetchGamesByGenre(genreId, genreName) {
         const gamesUrl = `${baseUrl}?key=${apiKey}&genres=${genreId}`;
@@ -213,8 +239,8 @@
             const response = await fetch(gamesUrl);
             const data = await response.json();
             updateJumbotron(genreName);  // Update the jumbotron to reflect the genre selected
-            displayGames(data.results, 'genreGames'); // Use the new container ID for genre-specific games
-            document.getElementById('popularGamesContainer').style.display = 'none';  // Hide Popular Games
+            displayGames(data.results, 'genreGames'); // Use container ID for genre-specific games
+            document.getElementById('popularGamesContainer').style.display = 'none';
             document.getElementById('genreGamesContainer').style.display = 'block';  // Display the genre-specific games container
             document.getElementById('genreTitle').textContent = `${genreName} Games`;  // Update the title to reflect the genre
         } catch (error) {
@@ -222,20 +248,17 @@
         }
     }
 
-    function showHomePage() {
-        document.getElementById('popularGamesContainer').style.display = 'block'; // Show Popular Games
-        document.getElementById('genreGamesContainer').style.display = 'none'; // Hide genre-specific games
-        const jumbotron = document.querySelector('.jumbotron');
-        jumbotron.innerHTML = `
-            <h1 class="display-4">Game Hub</h1>
-            <p class="lead">A Place To Read Up On Games</p>
-        `;
-    }
 
     document.getElementById('homeLink').addEventListener('click', (e) => {
         e.preventDefault();
         showHomePage();
     });
+
+    document.addEventListener('DOMContentLoaded', function() {
+        fetchGenres();
+        fetchGames('popularGames', '-added');
+    });
+
 
     function updateJumbotron(genreName) {
         const jumbotron = document.querySelector('.jumbotron');
@@ -267,6 +290,5 @@
     }
 
 </script>
-
 </body>
 </html>
