--- a/Final.html
+++ b/Final.html
@@ -167,8 +167,8 @@
         document.getElementById('genreGamesContainer').style.display = 'none'; // Hide genre-specific games
         const jumbotron = document.querySelector('.jumbotron');
         jumbotron.innerHTML = `
-            <h1 class="display-4">Game Hub</h1>
-            <p class="lead">A Place To Read Up On Games</p>
+            <h1 class="display-4">GAMEPEDIA</h1>
+            <p class="lead">A Place To Read Up On Games!</p>
         `;
     }
 
