--- a/Final.html
+++ b/Final.html
@@ -23,12 +23,12 @@
         }
         
         #banner {
-            background-image: url('Final.webp'); /* Update with the actual path or URL */
+            background-image: url('Final.webp'); 
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
-            height: 250px; /* Increased height */
-          margin-bottom: 20px; /* Space below the banner */
+            height: 250px; 
+          margin-bottom: 20px;
         }
 
         .navbar, .footer {
