--- a/Final.html
+++ b/Final.html
@@ -161,7 +161,8 @@
 
 <footer class="footer mt-auto py-3 text-center">
     <div>
-        <span>&copy; 2024 Sami Ahmad </span>
+        <span>&copy; 2024 Sami Ahmad
+                    @RAWG API Database </span>
     </div>
 </footer>
 
